--- a/Resources/config/namebench.cfg
+++ b/Resources/config/namebench.cfg
@@ -66,10 +66,8 @@ num_servers=50
 91.239.100.100=UncensoredDNS
 109.69.8.51=puntCAT
 149.112.112.112=Quad9-2
-156.154.70.1=Neustar
-156.154.71.1=Neustar-2
-156.154.70.1=UltraDNS DNS Advantage
-156.154.71.1=UltraDNS DNS Advantage-2
+156.154.70.1=UltraDNS Neustar DNS Advantage
+156.154.71.1=UltraDNS Neustar DNS Advantage-2
 195.46.39.39=SafeDNS
 195.46.39.40=SafeDNS-2
 198.101.242.72=Alternate DNS
