Moved some regionals to global
Moved regionals to global and commented out some dead ones

--- a/Resources/config/namebench.cfg
+++ b/Resources/config/namebench.cfg
@@ -43,45 +43,73 @@ num_servers=50
 [global]
 1.1.1.1=Cloudfare
 1.0.0.1=Cloudfare-2
+4.2.2.1=a.resolvers.level3.net US
+4.2.2.2=b.resolvers.Level3.net US
+4.2.2.3=c.resolvers.level3.net US
+4.2.2.4=d.resolvers.level3.net US
+4.2.2.5=e.resolvers.level3.net US
+4.2.2.6=f.resolvers.level3.net US
 8.20.247.20=Comodo SecureDNS 1
 8.26.56.26=Comodo SecureDNS 2
 8.8.8.8=Google Public DNS
 8.8.4.4=Google Public DNS-2
 9.9.9.9=Quad9
 23.253.163.53=Alternate DNS-2
-23.94.60.240=OpenNIC-2
+#23.94.60.240=OpenNIC-2
 37.235.1.174=FreeDNS
 37.235.1.177=FreeDNS-2
-45.77.165.194=Fourth Estate
+#45.77.165.194=Fourth Estate
 64.6.64.6=Verisign
 64.6.65.6=Verisign-2
-69.195.152.204=OpenNIC
+64.81.45.2=dns.lax1.speakeasy.net US
+64.81.79.2=dns.sfo1.speakeasy.net US
+64.81.127.2=dns.dfw1.speakeasy.net US
+64.81.159.2=dns.chi1.speakeasy.net US
+66.92.64.2=bos.speakeasy.net US
+66.92.159.2=dns.wdc1.speakeasy.net US
+66.92.224.2=phl.speakeasy.net US
+66.93.87.2=dns.sea1.speakeasy.net US
+#69.195.152.204=OpenNIC
 74.82.42.42=Hurricane Electric
 77.88.8.8=Yandex.DNS
 77.88.8.1=Yandex.DNS-2
-81.218.119.11=GreenTeamDNS
+#81.218.119.11=GreenTeamDNS
 84.200.69.80=DNS.WATCH
 84.200.70.40=DNS.WATCH-2
 89.233.43.71=UncensoredDNS-2
 91.239.100.100=UncensoredDNS
 109.69.8.51=puntCAT
+129.250.35.250=x.ns.gin.ntt.net US
+129.250.35.251=y.ns.gin.ntt.net US
 149.112.112.112=Quad9-2
-156.154.70.1=UltraDNS Neustar DNS Advantage
-156.154.71.1=UltraDNS Neustar DNS Advantage-2
+156.154.70.1=Neustar UltraDNS DNS Advantage
+156.154.71.1=Neustar UltraDNS DNS Advantage-2
 195.46.39.39=SafeDNS
 195.46.39.40=SafeDNS-2
 198.101.242.72=Alternate DNS
+199.2.252.10=ns2.sprintlink.net US
 199.85.126.10=Norton ConnectSafe
 199.85.127.10=Norton ConnectSafe-2
+204.97.212.10=ns3.sprintlink.net US
+204.117.214.10=ns1.sprintlink.net US
+204.194.232.200=?
+204.194.234.200=?
+208.67.220.123=resolver2-fs.opendns.com
 208.67.222.222=OpenDNS Home
+208.67.222.123=resolver1-fs.opendns.com
 208.67.220.220=OpenDNS Home-2
-208.76.50.50=SmartViper
-208.76.51.51=SmartViper-2
-209.88.198.133=GreenTeamDNS-2
+209.55.0.110=nsa.ibbsonline.com US
+209.55.1.220=nsb.ibbsonline.com US
+#208.76.50.50=SmartViper
+#208.76.51.51=SmartViper-2
+#209.88.198.133=GreenTeamDNS-2
 209.244.0.3=Level3
 209.244.0.4=Level3-2
+216.27.175.2=dns.atl1.speakeasy.net
 216.146.35.35=Dyn
 216.146.36.36=Dyn-2
+216.231.41.2=ns-legacy.speakeasy.net US
+216.254.95.2=dns.nyc1.speakeasy.net US
 
 
 
@@ -95,13 +123,7 @@ num_servers=50
 # DELTABRAVOZULU: replaced regional list with ones currently responding via fping
 
 [regional]
-4.2.2.1=a.resolvers.level3.net US
-4.2.2.2=b.resolvers.Level3.net US
-4.2.2.3=c.resolvers.level3.net US
-4.2.2.4=d.resolvers.level3.net US
 1.2.4.8=No name CN
-4.2.2.5=e.resolvers.level3.net US
-4.2.2.6=f.resolvers.level3.net US
 4.79.132.219=ns1.sotelips.net US
 8.3.48.20=dns1.linknetinc.com US
 8.3.48.30=dns2.linknetinc.com US
@@ -195,7 +217,6 @@ num_servers=50
 66.28.0.45=res1.dns.cogentco.com US
 66.28.0.61=res2.dns.cogentco.com US
 66.51.206.100=dns2.dslextreme.com US
-66.93.87.2=dns.sea1.speakeasy.net US
 66.151.145.1=ns1.sje.pnap.net US
 66.118.80.4=ns1.wvinternetservices.com US
 66.118.80.5=ns3.citynet.net US
@@ -455,8 +476,6 @@ num_servers=50
 106.51.255.133=ns5.acttv.in IN
 110.164.252.222=cns1.3bb.co.th TH
 110.164.252.223=cns2.3bb.co.th TH
-129.250.35.250=x.ns.gin.ntt.net US
-129.250.35.251=y.ns.gin.ntt.net US
 119.160.208.252=ns2.loxleybb.com TH
 122.210.229.161=122x210x229x161.ap122.ftth.ucom.ne.jp JP
 131.191.7.12=ns102.click-network.com US
@@ -708,7 +727,6 @@ num_servers=50
 198.6.1.142=cache07.ns.uu.net US
 198.60.22.2=cns1.xmission.com US
 198.6.1.195=cache05.ns.uu.net US
-199.2.252.10=ns2.sprintlink.net US
 198.82.247.34=yardbird.cns.vt.edu US
 199.80.64.202=ns2.state.lib.la.us US
 199.44.194.2=ns1.nettally.com US
@@ -770,7 +788,6 @@ num_servers=50
 203.146.237.222=ns02.csloxinfo.com TH
 203.176.144.12=www.clearcomm.com.my MY
 203.130.2.4=isp.super.net.pk PK
-204.97.212.10=ns3.sprintlink.net US
 203.189.88.54=geology.esdm.go.id ID
 204.152.184.76=or.isc.org US
 203.189.89.69=ip-89.69.kebt.diklat.esdm.go.id ID
@@ -822,8 +839,6 @@ num_servers=50
 209.0.205.50=ns2.bigcity.net US
 209.130.139.2=dns2.roc.gblx.net US
 209.51.161.14=tserv1.nyc4.he.net US
-209.55.0.110=nsa.ibbsonline.com US
-209.55.1.220=nsb.ibbsonline.com US
 209.97.224.3=ns2.revealsystems.net US
 209.143.0.10=primary.dns.bright.net US
 209.143.22.182=bacchus.bright.net US
